# everything-

./: .gitignore  README.md  Readme.md  justfile  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  base.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  menu.rs  operations.rs  shortcut.rs  system.rs  tray.rs  utils.rs
src/Components/: DataListView.vue  FileInfoList.vue  LoadingToast.vue  SearchBox.vue  StatusBar.vue
src/Store/: index.ts
src/System/: Config.ts  ContextMenu.ts  GetQueryResult.ts  Tray.ts
src/test/: index.js
src/utils/: FileToast.ts  index.ts
