[package]
name = "everything"
version = "0.1.0"
description = "A Tauri App"
authors = ["superwindcloud"]
homepage = "https://github.com/super1windcloud/everything"
edition = "2021"
default-run = "everything"


[[bin]]
name = "everything"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "everything_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
window-vibrancy = "0.6.0"
sys-locale = "0.3.2"
webbrowser = "1.0.5"
toml_edit = "0.22.27"
colored = "3.0.0"
everything-sdk = "0.0.6"
once_cell = "1.21.3"
chrono = "0.4.41"
infer = "0.19.0"
windows =  { version = "0.61.3" ,features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_Storage_FileSystem"] }
copypasta = "0.10.2"


[profile.dev]
incremental = true
opt-level = 0
debug = true
codegen-units = 256


[profile.release]
incremental = true
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"


